ConvertX/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: convertxthing-deployment
  labels:
    project: convertx


spec:
  replicas: 1
  selector:
    matchLabels:
      pod-project: convertx
  template:
    metadata:
      labels:
        pod-project: convertx
    spec:
      automountServiceAccountToken: false   # Container doesn't need service account token
      securityContext:
        appArmorProfile:
          type: RuntimeDefault
        runAsNonRoot: true
        fsGroup: 1500
        runAsGroup: 1500
        runAsUser: 1500
      containers:
        - name: convertx
          image: ghcr.io/c4illin/convertx:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: /
              port: 3000

          resources:
            requests:
              cpu: 150m
              memory: 128Mi
          volumeMounts:
            - name: convertxthing-data
              mountPath: /app/data
      volumes:
      - name: convertxthing-data
        persistentVolumeClaim: 
          claimName: convertxthing-data-pvc
          readOnly: false
